--- a/index.html
+++ b/index.html
@@ -1,181 +1,297 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./main-themes/blue/style.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&amp;display=swap"
-      rel="stylesheet"
-    />
-    <title>Startpage</title>
-  </head>
+  <!DOCTYPE html>
+  <html lang="en">
+    <head>
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <link rel="stylesheet" href="./main-themes/blue/style.css" />
+      <link
+        href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap"
+        rel="stylesheet"
+      />
+      <title>Startpage</title>
+    </head>
 
-  <body>
-    <nav class="navbar">
-      <div class="navbar-container container">
-        <input type="checkbox" name="" id="" />
-        <div class="hamburger-lines">
-          <span class="line line1"></span>
-          <span class="line line2"></span>
-          <span class="line line3"></span>
-        </div>
-        <ul class="menu-items">
-          <li><a onclick="changeCSS('blue',0)">blue</a></li>
-          <li><a onclick="changeCSS('cherry',0)">cherry</a></li>
-          <li><a onclick="changeCSS('violet',0)">violet</a></li>
-          <li><a onclick="changeCSS('green',0)">green</a></li>
-          <li><a onclick="changeCSS('mesh-purple',0)">mesh-purple</a></li>
-          <li><a onclick="changeCSS('orange',0)">orange</a></li>
-          <li><a onclick="changeCSS('purple',0)">purple</a></li>
-          <li><a onclick="changeCSS('white',0)">white</a></li>
-          <li><a onclick="changeCSS('retro-gradient',0)">retro-gradient</a></li>
-          <li><a onclick="changeCSS('summer-wave',0)">summer-wave</a></li>
-          <li>
-            <a onclick="changeCSS('Animated-Gradient',0)">animated-gradient</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <div class="wrapper">
-      <div class="bg"></div>
-      <div class="maincard">
-        <div class="content">
-          <div class="image">
-            <img
-              id="img"
-              src="./main-themes/blue/images/gif.gif"
-              alt="No image"
-            />
+    <body>
+      <nav class="navbar">
+        <div class="navbar-container container">
+          <input type="checkbox" name="" id="" />
+          <div class="hamburger-lines">
+            <span class="line line1"></span>
+            <span class="line line2"></span>
+            <span class="line line3"></span>
           </div>
-          <div id="links" class="links">
-            <section>
-              <h3>Daily</h3>
-              <ul>
-                <li><a href="https://www.youtube.com/">Youtube</a></li>
-                <li><a href="https://github.com">Github</a></li>
-                <li><a href="https://web.whatsapp.com/">Whatsapp</a></li>
-                <li><a href="https://web.telegram.org/z/">Telegram</a></li>
-              </ul>
-            </section>
-            <section>
-              <h3>Social</h3>
-              <ul>
-                <li><a href="https://twitter.com/">Twitter</a></li>
-                <li><a href="https://www.reddit.com/">Reddit</a></li>
-                <li><a href="https://Instagram.com">Instagram</a></li>
-                <li><a href="https://discord.com/app">Discord</a></li>
-              </ul>
-            </section>
-            <section>
-              <h3>Coding</h3>
-              <ul>
-                <li><a href="https://www.w3schools.com/">W3School</a></li>
-                <li><a href="https://leetcode.com">LeetCode</a></li>
-                <li><a href="https://hackerrank.com">HackerRank</a></li>
-                <li><a href="https://FreeCodeCamp.org">FreeCodeCamp</a></li>
-              </ul>
-            </section>
-            <section>
-              <h3>Google</h3>
-              <ul>
-                <li><a href="https://mail.google.com/mail/u/0/">Gmail</a></li>
-                <li><a href="https://drive.google.com">Drive</a></li>
-                <li><a href="https://maps.google.com">Maps</a></li>
-                <li><a href="https://github.com/Nainish-Rai">Custom</a></li>
-              </ul>
-            </section>
+          <ul class="menu-items">
+            <li><a onclick="changeCSS('blue',0)">blue</a></li>
+            <li><a onclick="changeCSS('cherry',0)">cherry</a></li>
+            <li><a onclick="changeCSS('violet',0)">violet</a></li>
+            <li><a onclick="changeCSS('green',0)">green</a></li>
+            <li><a onclick="changeCSS('mesh-purple',0)">mesh-purple</a></li>
+            <li><a onclick="changeCSS('orange',0)">orange</a></li>
+            <li><a onclick="changeCSS('purple',0)">purple</a></li>
+            <li><a onclick="changeCSS('white',0)">white</a></li>
+            <li><a onclick="changeCSS('retro-gradient',0)">retro-gradient</a></li>
+            <li><a onclick="changeCSS('summer-wave',0)">summer-wave</a></li>
+            <li>
+              <a onclick="changeCSS('Animated-Gradient',0)">animated-gradient</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <!-- Clocks -->
+          <div id="clocks" style="display:flex;gap:16px;justify-content:flex-end;flex-wrap:wrap;margin-bottom:10px;"></div>
+      <div class="wrapper">
+        <div class="bg"></div>
+        <div class="maincard">
+          <div class="content">
+            <div class="image"></div>
+            <div id="links" class="links">
+        
+              <section>
+                <h3>Productivity</h3>
+                <ul>
+                  <li><a href="https://docs.google.com/spreadsheets/u/0">Sheets</a></li>
+                  <li><a href="https://docs.google.com/document/u/0">Docs</a></li>
+                  <li><a href="https://calendar.google.com/calendar/u/0/r">Calendar</a></li>
+                  <li><a href="https://chatgpt.com/">Chat GPT</a></li>
+                </ul>
+              </section>
+
+              <section>
+                <h3>Current Show</h3>
+                <ul>
+                  <li><a href="http://10.11.11.31">MTX-001</a></li>
+                  <li><a href="http://10.11.11.32">MTX-002</a></li>
+                  <li><a href="http://10.11.11.101">PRJ-101</a></li>
+                  <li><a href="http://10.11.11.102">PRJ-102</a></li>
+                  <li><a href="http://10.11.11.103">PRJ-201</a></li>
+                  <li><a href="http://10.11.11.104">PRJ-301</a></li>
+                  <li><a href="http://10.11.11.241">NWS-001</a></li>
+                  <li><a href="http://10.11.11.242">NWS-901</a></li>
+                </ul>
+              </section>
+
+              <section>
+                <h3>Downtime</h3>
+                <ul>
+                  <li><a href="https://www.reddit.com/">Reddit</a></li>
+                  <li><a href="https://news.ycombinator.com/">Hacker News</a></li>
+                  <li><a href="https://discord.com/app">Discord</a></li>
+                </ul>
+              </section>
+
+              <section>
+                <h3>Local</h3>
+                <ul>
+                  <li><a href="http://127.0.0.1:8000/">Companion</a></li>
+                </ul>
+              </section>
+            </div>
           </div>
+          <!-- Search / Command Bar -->
+          <div class="search">
+            <form onsubmit="return search()">
+              <label for="search_box">> find / </label>
+              <input
+                type="text"
+                placeholder="Type Here or >command"
+                name="search_box"
+                id="search_box"
+                autocomplete="off"
+              />
+            </form>
+            <small style="opacity:.7">Tip: start commands with <code>&gt;</code> (e.g. <code>&gt;help</code>, <code>&gt;note buy milk</code>)</small>
+          </div>
+
         </div>
-        <div class="search">
-          <form onsubmit="return search()">
-            <label for="search_box" autofocus>> find / </label>
-            <input
-              type="text"
-              placeholder="Type Here"
-              name="search_box"
-              id="search_box"
-              autocomplete="off"
-              autofocus
-            />
-          </form>
-        </div>
+
       </div>
-    </div>
-  </body>
-  <script>
-    const themes = [
-      "blue",
-      "cherry",
-      "violet",
-      "green",
-      "orange",
-      "purple",
-      "white",
-      "mesh-purple",
-      "summer-wave",
-      "retro-gradient",
-    ];
+      </div>
+                          <!-- Scratchpad -->
+          <div class="scratchpad" style="margin-bottom:10px;">
+            <textarea
+              id="scratch"
+              rows="5"
+              placeholder="Scratchpad (saved locally) — type notes here…"
+              style="width:100%;resize:vertical"
+            ></textarea>
+          </div>
 
-    // Preload all of the themes css to avoid the FOUC on change
-    themes.forEach((theme) => {
-      const link = document.createElement("link");
-      link.rel = "stylesheet";
-      link.href = `./main-themes/${theme}/style.css`;
-      link.classList.add(`theme-${theme}`);
-      link.disabled = true;
-      document.head.appendChild(link);
-    });
+      <script>
+        /* ========== Theme Loader ========== */
+        const themes = [
+          "blue","cherry","violet","green","orange","purple",
+          "white","mesh-purple","summer-wave","retro-gradient"
+        ];
+        themes.forEach(theme => {
+          const link = document.createElement("link");
+          link.rel = "stylesheet";
+          link.href = `./main-themes/${theme}/style.css`;
+          link.classList.add(`theme-${theme}`);
+          link.disabled = true;
+          document.head.appendChild(link);
+        });
 
-    function changeCSS(theme) {
-      // Disable any themes that aren't the selected one
-      themes.forEach((t) => {
-        document.querySelector(`.theme-${t}`).disabled = t !== theme;
-      });
-      changeImgSrc(theme);
-      // And save it to localStorage
-      localStorage.setItem("selected-theme", theme);
-    }
+        function changeCSS(theme) {
+          themes.forEach(t => {
+            document.querySelector(`.theme-${t}`).disabled = t !== theme;
+          });
+          localStorage.setItem("selected-theme", theme);
+        }
 
-    // Change background image
-    function changeImgSrc(theme) {
-      let img_bar = document.getElementById("img");
-      img_bar.src = `./main-themes/${theme}/images/gif.gif`;
-    }
+        let storedTheme = localStorage.getItem("selected-theme");
+        if (storedTheme) changeCSS(storedTheme);
 
-    // Load the last selected theme on load
-    let storedTheme = localStorage.getItem("selected-theme");
-    if (storedTheme) {
-      changeCSS(storedTheme);
-    }
+        /* ========== Startpage Logic ========== */
 
-    const search_url = "https://duckduckgo.com/";
+        const $ = (q) => document.querySelector(q);
+        const scratch = $("#scratch");
+        const clocks = $("#clocks");
+        const searchInput = $("#search_box");
 
-    function search() {
-      const is_url =
-        /^(((http)|(https)):\/\/)?(www\.)?[a-zA-Z0-9]+\.[a-zA-Z]+\/?([a-zA-Z0-9/?=&%-_]+)?$/;
-      const is_ip =
-        /^(((http)|(https)):\/\/)?([0-9]{1,3}.[0-9]{1,3}.[0-9]{1,3}.[0-9]{1,3}|localhost)(:[0-9]{1,5})?(\/[a-zA-Z0-9/?=&%-_]+)?$/;
+        // Persist scratchpad
+        scratch.value = localStorage.getItem("scratchpad") || "";
+        scratch.addEventListener("input", () =>
+          localStorage.setItem("scratchpad", scratch.value)
+        );
 
-      const search_term = document.getElementById("search_box").value;
-      const url_match = search_term.match(is_url);
-      const ip_match = search_term.match(is_ip);
-      if (url_match != null) {
-        window.location.href =
-          url_match[0].substring(0, 4) == "http"
-            ? url_match[0]
-            : "https://" + url_match[0];
-      } else if (ip_match != null) {
-        window.location.href =
-          ip_match[0].substring(0, 4) == "http"
-            ? ip_match[0]
-            : "http://" + ip_match[0];
-      } else {
-        window.location.href = search_url + encodeURIComponent(search_term);
-      }
+        // Clocks (local + remote)
+        const timezones = ["Europe/London", "Europe/Berlin"];
+        function renderClocks() {
+          clocks.innerHTML = "";
+          timezones.forEach(tz => {
+            const div = document.createElement("div");
+            div.dataset.tz = tz;
+            div.style.minWidth = "180px";
+            clocks.appendChild(div);
+          });
+          updateClocks();
+          setInterval(updateClocks, 1000);
+        }
+        function updateClocks() {
+          const now = new Date();
+          clocks.querySelectorAll("div").forEach(el => {
+            const tz = el.dataset.tz;
+            try {
+              const fmt = new Intl.DateTimeFormat("en-GB", {
+                timeZone: tz, hour: "2-digit", minute: "2-digit", second: "2-digit"
+              });
+              el.textContent = `${tz}: ${fmt.format(now)}`;
+            } catch {
+              el.textContent = `${tz}: [invalid tz]`;
+            }
+          });
+        }
+        renderClocks();
 
-      return false;
-    }
-  </script>
-</html>
+        /* ========== Command / Search ========== */
+
+        const GLOBAL_SHORTCUTS = {
+          g: q => `https://www.google.com/search?q=${encodeURIComponent(q)}`,
+          ddg: q => `https://duckduckgo.com/?q=${encodeURIComponent(q)}`,
+          yt: q => `https://www.youtube.com/results?search_query=${encodeURIComponent(q)}`,
+          r: q => `https://www.reddit.com/search/?q=${encodeURIComponent(q)}`,
+          hn: q => `https://hn.algolia.com/?q=${encodeURIComponent(q)}`
+        };
+
+        const RE_URL = /^(((http|https):\/\/)?([a-zA-Z0-9-]+\.)+[a-zA-Z]{2,})(\/[^\s]*)?$/;
+        const RE_IP = /^(((http|https):\/\/)?((\d{1,3}\.){3}\d{1,3}|localhost))(:(\d{1,5}))?(\/[^\s]*)?$/;
+
+        function search() {
+          const raw = searchInput.value.trim();
+          if (!raw) return false;
+
+          // commands
+          if (raw.startsWith(">")) {
+            runCommand(raw);
+            return false;
+          }
+
+          // shortcuts
+          const [key, ...parts] = raw.split(/\s+/);
+          const q = parts.join(" ");
+          if (GLOBAL_SHORTCUTS[key]) {
+            window.location.href = GLOBAL_SHORTCUTS[key](q);
+            return false;
+          }
+
+          // URLs/IPs
+          if (RE_URL.test(raw)) {
+            window.location.href = raw.startsWith("http") ? raw : "https://" + raw;
+            return false;
+          }
+          if (RE_IP.test(raw)) {
+            window.location.href = raw.startsWith("http") ? raw : "http://" + raw;
+            return false;
+          }
+
+          // default search
+          window.location.href = "https://duckduckgo.com/?q=" + encodeURIComponent(raw);
+          return false;
+        }
+
+        function runCommand(line) {
+          const [cmd, ...rest] = line.slice(1).trim().split(/\s+/);
+          const arg = rest.join(" ");
+          switch (cmd) {
+            case "help":
+              alert([
+                ">help",
+                ">note <text>     — append to scratchpad",
+                ">notes           — view scratchpad",
+                ">clear-notes     — clear scratchpad",
+                ">tz add <zone>   — add timezone",
+                ">tz remove <zone>— remove timezone"
+              ].join("\n"));
+              break;
+            case "note":
+              scratch.value += (scratch.value ? "\n" : "") + arg;
+              localStorage.setItem("scratchpad", scratch.value);
+              break;
+            case "notes":
+              alert(scratch.value || "(empty)");
+              break;
+            case "clear-notes":
+              scratch.value = "";
+              localStorage.removeItem("scratchpad");
+              break;
+            case "tz":
+              {
+                const sub = rest[0];
+                const zone = rest.slice(1).join(" ");
+                if (sub === "add" && zone) {
+                  if (!timezones.includes(zone)) timezones.push(zone);
+                  renderClocks();
+                } else if (sub === "remove" && zone) {
+                  const idx = timezones.indexOf(zone);
+                  if (idx >= 0) timezones.splice(idx, 1);
+                  renderClocks();
+                } else {
+                  alert("Usage: >tz add <IANA_tz> | >tz remove <IANA_tz>");
+                }
+              }
+              break;
+            default:
+              alert(`Unknown command: ${cmd}. Try >help`);
+          }
+        }
+
+        // Keyboard niceties
+        window.addEventListener("keydown", e => {
+          if (e.key === "/" && document.activeElement !== searchInput) {
+            e.preventDefault();
+            searchInput.focus();
+            searchInput.select();
+          } else if (e.key === "Escape" && document.activeElement === searchInput) {
+            searchInput.value = "";
+          }
+        });
+
+        // Auto focus on load
+        window.addEventListener("load", () => {
+          searchInput.focus();
+          searchInput.select();
+        });
+      </script>
+    </body>
+  </html>
