--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&amp;display=swap"
+      rel="stylesheet"
+    />
     <title>Startpage</title>
-
-    <!-- Theme + page CSS (keep your files as-is) -->
-    <link rel="stylesheet" href="./main-themes/purple/style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet" />
-  </head>
+  </head>s
 
   <body>
     <nav class="navbar" aria-label="Theme & profile selector">
