--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               placeholder="the world at your fingertips"
             />
           </form>
-          <small>Shell: <code>ls</code> <code>pwd</code> <code>cd &lt;profile&gt;</code> <code>labels</code> <code>theme &lt;name&gt;</code> <code>date</code> · Notes: <code>note</code>/<code>cat notes</code>/<code>rm notes</code></small>
+          <small>Shell: <code>bm ls</code>, <code>ls bookmarks</code>, <code>cd &lt;profile&gt;</code>, <code>theme &lt;name&gt;</code>, <code>date</code>. Notes: <code>note</code>/<code>cat notes</code>/<code>rm notes</code></small>
           <div id="cmd-hints" role="listbox" aria-label="Command suggestions" style="display:none"></div>
         </div>
       </div>
