added vtag to main.js to test

--- a/index.html
+++ b/index.html
@@ -76,6 +76,6 @@
     </section>
 
     <!-- Bootstrap the app -->
-    <script type="module" src="./assets/js/main.js"></script>
+    <script type="module" src="./assets/js/main.js?v=dev"></script>
   </body>
 </html>
