test: cover shared state invariants

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Startpage</title>
 
     <!-- Theme variables first (colorway only), then structural layout. -->
-    <link rel="stylesheet" href="./main-themes/magenta/style.css" />
+    <link rel="stylesheet" href="./main-themes/magenta/style.css" data-theme="magenta" data-managed-theme="true" />
     <link rel="stylesheet" href="./assets/css/layout.css" />
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet" />
   </head>
