fix(commands): use dot prefix for shell commands

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="maincard" role="region" aria-label="Startpage">
         <div class="search" role="search">
           <form id="search-form" autocomplete="off">
-            <label for="search_box">&gt; find /</label>
+            <label for="search_box">. find /</label>
             <input
               type="text"
               id="search_box"
